New in 3.0.2 (2019-03-11)
- Adaptive Icon
- Android Pie support

New in 3.0.1 (2018-04-29)
- Bug fixes.


New in 3.0.0 (2018-04-27)
This release adds the foundation for support of multiple sites. Beta implementations of 8chan and Lainchan are implemented.

- Multisite support.
- Noscript recaptcha 2 support.
- Added a scrollbar.
- New posting options.
- Post text selection.


New in 2.3.1 (2017-07-15)
- Better link detection.
- More themes.
- Fix image loading taking a long time if the cache is full.
- Fix crashing bug related to the status view.
- Bug fixes.


New in 2.3.0 (2017-03-19)
- Added update checker to notify of new releases.
- Force new captcha for thread making.
- Bug fixes.


New in 2.2.0 (2016-10-03)
- Add sliding of threads back.
- Rewrote thread watching, it's more stable and works correctly with doze now.
- Optimized parsing with multithreading.
- Added album view.
- Added bookmark clearing.

- Added inline reporting.
- All boards are added by default now.
- Thread positions are retained across restarts.
- Allow setting of multiple types on filters simultaneously.
- Made single frame gifs zoomable.
- Add saving of images into their own board folder.
- More advanced settings.
- Many bug fixes.


New in 2.1.3 (2016-01-28)
- New Google Play release


New in 2.1.2 (2016-01-17)
- Fix for a crash on Android 4
- Changed the top boards again


New in 2.1.1 (2016-01-17)
- Fix for the freeze bug
- Bug fixes
- The reply button color can be changed
- Reply button hides on scroll


New in 2.1.0 (2015-11-18)
This is the release version of 2.0.0 that added:
- Swipeable controllers
- Fixed recaptcha v1
- Added some more advanced options
- Bug fixes


New in 2.0.0 (2015-08-23)
- New design.
- New inline reply layout.
- Support for thread hiding.
- Support for filtering threads, making posts either highlighted, hidden or completely removed.
- Support for history.
- More themes were added.
- Album downloads have been improved.
- Catalog mode now uses cards.