@@ -47,10 +47,10 @@ android {
     keyPass=pass
     */
 
-    def hash = getCommitHash();
+    def hash = getCommitHash()
 
     File f = file('keys.properties')
-    boolean doSign = f.exists();
+    boolean doSign = f.exists()
 
     if (doSign) {
         Properties props = new Properties()
@@ -132,7 +132,7 @@ dependencies {
     implementation "com.android.support:exifinterface:${supportVersion}"
     implementation "com.android.support:design:${supportVersion}"
     implementation "com.android.support:customtabs:${supportVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.9.0'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
