@@ -170,7 +170,6 @@ Re-enable this permission in the app settings if you permanently disabled it."</
     <string name="setup_sites_add_title">Add site</string>
     <string name="setup_sites_description">Add a site by its URL or name</string>
     <string name="setup_sites_url">URL or name</string>
-    <string name="setup_sites_url_hint">http://example.com</string>
     <string name="setup_sites_site_description">%s added</string>
     <string name="setup_sites_add_boards_hint">Tap to add boards</string>
 
@@ -418,7 +417,7 @@ Enable \"Play videos with external player\" in the settings to play videos with 
 Crash reports do not collect any personally identifiable information."
     </string>
     <string name="settings_crash_reporting_toggle_notice">Setting will be applied on the next app start.</string>
-    <string name="settings_about_license">Released under the GNU GPLv3 license</string>
+    <string name="settings_about_license">Licensed under GPLv3</string>
     <string name="settings_about_license_description">Tap to see license</string>
     <string name="settings_about_licenses">Open Source Licenses</string>
     <string name="settings_about_licenses_description">Legal information about licenses</string>
