@@ -1,6 +1,7 @@
 New in 3.0.2 (2019-03-11)
-- Adaptive Icon
-- Android Pie support
+- Adaptive Icon.
+- Android Pie support.
+- Bug fixes.
 
 New in 3.0.1 (2018-04-29)
 - Bug fixes.
